# SentinelGuard

./: Dockerfile  README.md  package.json  pyproject.toml
.github/workflows/: publish-package.yml
dashboard/: index.html
scanner/: engine.py
sentinelguard/: engine.py
